--- a/RangemanSync/RangemanSync/MainPage.xaml
+++ b/RangemanSync/RangemanSync/MainPage.xaml
@@ -20,7 +20,7 @@
                 </ListView.ItemTemplate>
             </ListView>
             <Button Text="Download Headers"  x:Name="DownloadHeadersButton" Command="{Binding Path=DownloadHeadersCommand}" IsVisible="{Binding WatchCommandButtonsAreVisible}"/>
-            <Button Text="Download / Save as GPX" x:Name="DownloadSaveGPXButton" IsVisible="{Binding WatchCommandButtonsAreVisible}"/>
+            <Button Text="Download / Save as GPX" x:Name="DownloadSaveGPXButton" Command="{Binding Path=SaveGPXCommand}" IsVisible="{Binding WatchCommandButtonsAreVisible}"/>
             <Button Text="Disconnect watch" x:Name="DisconnectButton" IsVisible="{Binding DisconnectButtonIsVisible}"/>
         </StackLayout>
     </ContentPage.Content>
