Add config page tab and empty page ( to be added ) as a Configuration page

--- a/RangemanSync/RangemanSync/AppShell.xaml
+++ b/RangemanSync/RangemanSync/AppShell.xaml
@@ -6,9 +6,10 @@
     xmlns:local="clr-namespace:RangemanSync"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+    <TabBar>
+        <Tab Title="Main menu">
+            <ShellContent Title="Download GPX" ContentTemplate="{DataTemplate local:MainPage}" Route="MainPage" />
+            <ShellContent Title="Configuration" ContentTemplate="{DataTemplate local:ConfigPage}" Route="Config" />
+        </Tab>
+    </TabBar>
 </Shell>
